Print log message
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
                     if (Module && !Module.printErr) {
                         Module.printErr = function (text) {
-                            console.log(`Error: ${text}`)
+                            console.log(text)
 
                             //const match = /qrc:\/userItem:(?<line_number>\d+): (?<error_message>.*)/.exec(lines[i])
                             let match = /qrc:\/userItem:(\d+): (.*)/.exec(text)
