--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         .splitter {
             width: 100%;
-            height: 100%;
+            height: calc(100% - 30px);
             display: flex;
         }
 
