Use qml syntax highlight
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         var qtLoader;
         var editor = ace.edit("editor-div");
         editor.setTheme("ace/theme/dracula");
-        editor.session.setMode("ace/mode/rust");
+        editor.session.setMode("ace/mode/qml");
         editor.setOption("showInvisibles", true)
         editor.setOption("useWorker", false); // Avoid problems with syntax check
         editor.commands.addCommand({
