--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
             <canvas id="qtcanvas" oncontextmenu="event.preventDefault()" contenteditable="true"></canvas>
         </div>
     </div>
+    <div class="status-bar"> 
+        <p> Status Bar </p>
+        <p>Ln ${Linha} Col ${Coluna}</p>
+     </div>
 
     <script src="examples.js" type="text/javascript" charset="utf-8"></script>
     <script type='text/javascript'>
