--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         </div>
 
         <div class="dropdown" style="cursor:pointer">
-            <button id="reload-button" onclick="automatic_reload_checkbox()" class="dropdown-button">Automatic Reload</button>
+            <button id="reload-button" onclick="automatic_reload_checkbox()" class="dropdown-button">Automatic
+                Reload</button>
             <script type="text/javascript">
                 function automatic_reload_checkbox() {
                     let element = document.getElementById("reload-button");
@@ -48,14 +49,14 @@
         </div>
 
         <div class="github-button" onclick="window.open('https://github.com/patrickelectric/qmlonline');">
-            <svg data-icon="github" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" data-fa-i2svg="" class="github-icon"><path fill="currentColor" d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path></svg>
+            <svg data-icon="github" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" data-fa-i2svg=""
+                class="github-icon">
+                <path fill="currentColor"
+                    d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z">
+                </path>
+            </svg>
         </div>
     </div>
-    <div id="status-bar" class="status-bar"> 
-        <p> Status Bar </p>
-        <p>Ln ${Linha} Col ${Coluna}</p>
-     </div>
-
     <div class="splitter">
         <div id="editor-div"></div>
         <div id="separator"></div>
@@ -71,13 +72,33 @@
 
             <canvas id="qtcanvas" oncontextmenu="event.preventDefault()" contenteditable="true"></canvas>
         </div>
+        <!-- Status Bar -->
+        <div id="status-bar" class="status-bar">
+            <p> Status Bar </p>
+            <p>Ln ${Linha} Col ${Coluna}</p>
+        </div>
     </div>
+    <!-- Terminal -->
+    <div id="terminal">
+        <p>></p>
+    </div>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css"/>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+       $( function () {
+            $("#terminal").resizable( {
+                handles: 'n' // only resize up
+            }
+            );
+        })
+    </script>
 
     <script src="examples.js" type="text/javascript" charset="utf-8"></script>
     <script type='text/javascript'>
         const examples = getExamples();
         let select = document.getElementById("dropdown-content");
-        for(let i in examples) {
+        for (let i in examples) {
             const opt = examples[i];
             let element = document.createElement("a");
             element.textContent = opt.name;
@@ -90,7 +111,7 @@
         function openExample(file) {
             let content = loadFile(file);
             editor.session.setValue(content);
-            if(Module.self) {
+            if (Module.self) {
                 Module.self().setCode(content)
             }
         }
@@ -98,7 +119,7 @@
         function loadFile(filePath) {
             //TODO: use https://xhr.spec.whatwg.org/
             let request = new XMLHttpRequest();
-            request.open("GET", "qml/examples/"+ filePath, false);
+            request.open("GET", "qml/examples/" + filePath, false);
             request.send();
             return request.status === 200 ? request.responseText : "";
         }
@@ -119,12 +140,12 @@
                 win: "Ctrl-S",
                 "mac": "Cmd-S"
             },
-            exec: function(editor) {
+            exec: function (editor) {
                 Module.self().setCode(editor.session.getValue())
             }
         })
-        editor.getSession().on('change', function() {
-            if(Module.self && document.getElementById("reload-button").style.backgroundColor != "#2F2F32") {
+        editor.getSession().on('change', function () {
+            if (Module.self && document.getElementById("reload-button").style.backgroundColor != "#2F2F32") {
                 editor.session.clearAnnotations()
                 Module.self().setCode(editor.session.getValue())
             }
@@ -138,7 +159,7 @@
 
             // Check for code in param
             const codeParam = urlParams.get('code');
-            if(codeParam) { // We do have code!
+            if (codeParam) { // We do have code!
                 decodeCodePara = LZString.decompressFromEncodedURIComponent(codeParam);
                 editor.session.setValue(decodeCodePara)
             } else { // We don't, load the magic of the infinity happiness
@@ -151,17 +172,17 @@
 
             qtLoader = QtLoader({
                 canvasElements: [canvas],
-                showLoader: function(loaderStatus) {
+                showLoader: function (loaderStatus) {
                     spinner.style.display = 'block';
                     canvas.style.display = 'none';
                     status.innerHTML = loaderStatus + "...";
                 },
-                showError: function(errorText) {
+                showError: function (errorText) {
                     status.innerHTML = errorText;
                     spinner.style.display = 'block';
                     canvas.style.display = 'none';
                 },
-                showExit: function() {
+                showExit: function () {
                     status.innerHTML = "Application exit";
                     if (qtLoader.exitCode !== undefined)
                         status.innerHTML += " with code " + qtLoader.exitCode;
@@ -171,11 +192,11 @@
                     canvas.style.display = 'none';
                     console.log("exit", qtLoader.exitCode)
                 },
-                showCanvas: function() {
+                showCanvas: function () {
                     spinner.style.display = 'none';
                     canvas.style.display = 'block';
                     console.log("what", Module.self)
-                    Module.instantiateWasm = function(imports, successCallback) {
+                    Module.instantiateWasm = function (imports, successCallback) {
                         console.log('instantiateWasm: instantiating asynchronously');
                     };
                 },
@@ -184,7 +205,7 @@
 
             // TODO: Find a better way to set the initial code and wait for the webassembly to start
             var intervalID = setInterval(
-                function() {
+                function () {
                     console.log("Waiting for webassembly to load...")
 
                     if (Module && !Module.printErr) {
@@ -232,7 +253,7 @@
                         Module.self().setCode(editor.session.getValue())
                     }
                 },
-            100);
+                100);
         }
 
         // function is used for dragging and moving
@@ -242,6 +263,7 @@
             const statusBar = document.getElementById("status-bar");
             const second = document.getElementById("qml-div");
             const qtcanvas = document.getElementById("qtcanvas");
+            const terminal = document.getElementById("terminal");
 
             element.onmousedown = onMouseDown;
 
@@ -249,10 +271,11 @@
                 md = {
                     e,
                     offsetLeft: element.offsetLeft,
-                        offsetTop: element.offsetTop,
-                        firstWidth: first.offsetWidth,
-                        secondWidth: second.offsetWidth,
-                        statusBarWidth: statusBar.offsetWidth
+                    offsetTop: element.offsetTop,
+                    firstWidth: first.offsetWidth,
+                    secondWidth: second.offsetWidth,
+                    statusBarWidth: statusBar.offsetWidth,
+                    terminalWidth: terminal.offsetWidth
                 };
                 document.onmousemove = onMouseMove;
                 document.onmouseup = () => {
@@ -270,6 +293,7 @@
 
                 element.style.left = md.offsetLeft + delta.x + "px";
                 statusBar.style.width = (md.statusBarWidth + delta.x - 10) + "px";
+                terminal.style.width = (md.terminalWidth + delta.x - 12) + "px";
                 first.style.width = (md.firstWidth + delta.x) + "px";
                 second.style.width = (md.secondWidth - delta.x) + "px";
                 qtcanvas.style.setProperty("width", second.style.width + "px", "!important");
@@ -282,16 +306,17 @@
         function share() {
             let string = editor.session.getValue();
             let compressed = LZString.compressToEncodedURIComponent(string);
-            console.log("Compressed in:", compressed.length/string.length)
+            console.log("Compressed in:", compressed.length / string.length)
 
-            let tinyUrl = "https://tinyurl.com/api-create.php\?url\=" + window.location.href + "?code=" + encodeURI(compressed)
+            let tinyUrl = "https://tinyurl.com/api-create.php\?url\=" + window.location.href + "?code=" + encodeURI(
+                compressed)
 
             let request = new XMLHttpRequest();
             request.open('GET', tinyUrl);
             // TODO: Only for debug, remove after github pages test
             open(tinyUrl)
             request.send();
-            request.onload = function() {
+            request.onload = function () {
                 if (request.status == 200) {
                     console.log(`Get OK ${request.response}`)
                     var popup = document.getElementById("myPopup");
